--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,8 @@
+
+-   title: v2.3.0
+    version: 2.3.0
+    commitID: c0d9fc512cbaa7cedfca878386a66f744130cde7
+
 -   title: v2.2.0
     version: 2.2.0
     commitID: 535ad58e3c4f0eca6d890a08153a969f6b2d5856
