--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -5,7 +5,7 @@
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
-    "version": "2.3.0",
+    "version": "2.3.1",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -109,7 +109,7 @@
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "更改菜单语言",
+            "name": "更改语言",
             "identifier": "change_language",
             "script": "utilities/change_language.cocoascript"
         },
