--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   title: v2.3.1
+    version: 2.3.1
+    commitID: 9aacdd50c22fe6e4fe457afea70535eb2401af8e
 
 -   title: v2.3.0
     version: 2.3.0
