--- a/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
+++ b/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
@@ -77,6 +77,16 @@
             "script": "code/window.cocoascript"
         },
         {
+            "name": "Nine-Patch Preview",
+            "identifier": "nine_patch_preview",
+            "script": "code/nine_patch_preview.cocoascript"
+        },
+        {
+            "name": "View Code",
+            "identifier": "view_code",
+            "script": "code/view_code.cocoascript"
+        },
+        {
             "name": "Add System Icon Grid Line",
             "identifier": "add_system_icon",
             "script": "utilities/add_system_icon.cocoascript"
@@ -144,6 +154,9 @@
             "export_vector_drawable",
             "export_app_icon",
             "export_shape_xml",
+            "-",
+            "nine_patch_preview",
+            "view_code",
             "-",
             {
                 "title": "Utilities",
