--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -96,3 +96,4 @@ current_page_is_no_template: Current page is no a Android app icon template.
 app_icon_not_find: Can't find Android app icon inside current page.
 
 view_code: View Code
+nine_patch_preview: Nine-Patch Preview
