--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -74,7 +74,7 @@
         {
             "name": "View Code",
             "identifier": "view_code",
-            "script": "code/window.cocoascript"
+            "script": "code/view_code.cocoascript"
         },
         {
             "name": "Nine-Patch Preview",
