--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -72,17 +72,17 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
-            "name": "",
+            "name": "View Code",
             "identifier": "view_code",
-            "script": "code/window.cocoascript"
+            "script": "code/view_code.cocoascript"
         },
         {
-            "name": "",
+            "name": "点九图片预览",
             "identifier": "nine_patch_preview",
             "script": "code/nine_patch_preview.cocoascript"
         },
         {
-            "name": "",
+            "name": "View Code",
             "identifier": "view_code",
             "script": "code/view_code.cocoascript"
         },
