--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -95,5 +95,5 @@ template_no_exists: Template file "%1" is no exists.
 current_page_is_no_template: Current page is no a Android app icon template.
 app_icon_not_find: Can't find Android app icon inside current page.
 
-view_code: View Code
+code_preview: Code Preview
 nine_patch_preview: Nine-Patch Preview
