--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -72,19 +72,14 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
-            "name": "View Code",
-            "identifier": "view_code",
-            "script": "code/view_code.cocoascript"
-        },
-        {
             "name": "点九图片预览",
             "identifier": "nine_patch_preview",
             "script": "code/nine_patch_preview.cocoascript"
         },
         {
-            "name": "View Code",
-            "identifier": "view_code",
-            "script": "code/view_code.cocoascript"
+            "name": "",
+            "identifier": "code_preview",
+            "script": "code/code_preview.cocoascript"
         },
         {
             "name": "添加系统图标网格",
@@ -156,7 +151,7 @@
             "export_shape_xml",
             "-",
             "nine_patch_preview",
-            "view_code",
+            "code_preview",
             "-",
             {
                 "title": "实用工具",
