--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -74,12 +74,12 @@
         {
             "name": "Nine-Patch Preview",
             "identifier": "nine_patch_preview",
-            "script": "code/nine_patch_preview.cocoascript"
+            "script": "preview/nine_patch_preview.cocoascript"
         },
         {
             "name": "Code Preview",
             "identifier": "code_preview",
-            "script": "code/code_preview.cocoascript"
+            "script": "preview/code_preview.cocoascript"
         },
         {
             "name": "Add System Icon Grid Line",
@@ -151,7 +151,6 @@
             "export_shape_xml",
             "-",
             "nine_patch_preview",
-            "code_preview",
             "-",
             {
                 "title": "Utilities",
