--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -19,15 +19,13 @@ report_issues: Report Issues
 donate: Donate
 change_language: Change Language
 update: Check for Update
-
 no_selection: Please select at least one layer.
 input_asset_name: Input asset name for "%1".
-
 language_file_not_found: Language file not found.
 language_file_not_found_desc: Language file "%1" does not existed.
 ok: OK
 cancel: Cancel
-
+export: Export
 least_version_desc: Android Res Export %1 is currently the newest version available.
 least_version_title: You are up-to-date.
 older_version_desc: |-
@@ -38,10 +36,8 @@ failure_update_title: Can not check for updates.
 failure_update_desc: |-
     Please visite the web site and download newest version.
     %1.
-
 asset_name_for_nine_path: Asset name for new nine-path.
 can_not_create_nine_patch_from_artboard_or_symbol_master: Can't create Nine-Patch from Artboard or Symbol Master.
-
 asset_name_for_vector_drawable: Asset name for new vector drawable.
 vector_drawable_no_support_text: Text layer can't covert to vector drawable, you can convert to outlines first.
 vector_drawable_no_support_bitmap: Bitmap layer can't covert to vector drawable.
@@ -55,20 +51,16 @@ vector_drawable_no_support_shadow: Shape layer with shadow is not supported by v
 vector_drawable_no_support_inner_shadow: Shape layer with inner shadow is not supported by vector drawable.
 vector_drawable_no_support_blur: Shape layer with blur is not supported by vector drawable.
 can_not_group_artboard: Can't group with Artboard or Symbol Master.
-
 no_png_asset: No any PNG asset.
-
 report_layer_rename: 'Invaild layer name: %1 -> %2'
 report_layer_name_duplicate: 'Duplicate layer name: %1'
 no_duplicate_and_invaild_asset_name: No duplicate and invaild asset name.
-
 install_imagemagick_title: Please check that you have ImageMagick installed.
 install_imagemagick_message: |-
     Export Android nine-patch image feature depend on ImageMagick library.
     Install use HomeBrew:
     $ brew install ImageMagick
 no_nine_patch_asset: No any nine-patch asset.
-
 s2v_version_title: You need to update svg2vectordrawable.
 s2v_version_message: |-
     Run follow command in the Terminal to update svg2vectordrawable.
@@ -79,10 +71,8 @@ install_svgo_and_s2v_message: |-
     After you installed Node.js, run follow command in the Terminal.
     $ npm install -g svgo svg2vectordrawable
 no_vector_drawable_asset: No any vector drawable asset.
-
 show_in_finder_after_export: Show in Finder After Export.
 use_imageoptim_after_export: Optimize Images use ImageOptim After Export.
-
 export_shape_xml: Export Shape Drawable XML
 not_support_layer_style: Layer style like shadow and blur is not support by Android shape drawable.
 too_many_color_stop: The gradient in Android shape drawable not support greater than 3 colors.
@@ -90,10 +80,19 @@ no_support_fill_type: The fill type is not support for Android shape drawable.
 no_support_stroke_type: The stroke type is not support for Android shape drawable.
 no_support_shape: Only support shape layer like rectangle or oval.
 no_shape_layer: Please choose one shape layer like rectangle or oval.
-
 template_no_exists: Template file "%1" is no exists.
 current_page_is_no_template: Current page is no a Android app icon template.
 app_icon_not_find: Can't find Android app icon inside current page.
-
 code_preview: Code Preview
 nine_patch_preview: Nine-Patch Preview
+no_permission: No Permission
+cannot_export_to_folder: You can't export assets to this folder.
+select_one_nine_patch_asset: Please select one nine-patch asset.
+nine_patch_layer_structure_is_wrong: The layer structure of nine-patch asset is wrong.
+
+html_tip_bg_light: Use light transparent background
+html_tip_bg_dark: Use dark transparent background
+html_tip_bg_white: Use white background
+html_label_width: Width
+html_label_height: Height
+html_label_content: Content
