--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -72,9 +72,14 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
-            "name": "View Code",
-            "identifier": "view_code",
-            "script": "code/window.cocoascript"
+            "name": "Nine-Patch Preview",
+            "identifier": "nine_patch_preview",
+            "script": "preview/nine_patch_preview.cocoascript"
+        },
+        {
+            "name": "Code Preview",
+            "identifier": "code_preview",
+            "script": "preview/code_preview.cocoascript"
         },
         {
             "name": "Add System Icon Grid Line",
@@ -144,6 +149,8 @@
             "export_vector_drawable",
             "export_app_icon",
             "export_shape_xml",
+            "-",
+            "nine_patch_preview",
             "-",
             {
                 "title": "Utilities",
