--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -5,7 +5,7 @@
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
-    "version": "2.3.2",
+    "version": "2.3.3",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -76,16 +76,16 @@
             "script": "preview/nine_patch_preview.cocoascript"
         },
         {
-            "name": "",
+            "name": "从选中图层生成色彩资源代码",
             "identifier": "color_resource_code_from_selected_layer",
             "handler": "colorResourceCodeFromSelectedLayer",
-            "script": "preview/code_preview.cocoascript"
+            "script": "preview/color_code_preview.cocoascript"
         },
         {
-            "name": "",
+            "name": "从文档色彩生成色彩资源代码",
             "identifier": "color_resource_code_from_document_color",
             "handler": "colorResourceCodeFromDocumentColor",
-            "script": "preview/code_preview.cocoascript"
+            "script": "preview/color_code_preview.cocoascript"
         },
         {
             "name": "添加系统图标网格",
@@ -158,7 +158,6 @@
             "-",
             "nine_patch_preview",
             "color_resource_code_from_document_color",
-            "color_resource_code_from_selected_layer",
             "-",
             {
                 "title": "实用工具",
