--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -26,6 +26,7 @@ language_file_not_found_desc: 语言文件 "%1" 不存在。
 ok: 确定
 cancel: 取消
 export: 导出
+save: 保存
 least_version_desc: 您所安装的 Android Res Export %1 是最新版本。
 least_version_title: 您已经是最新版本
 older_version_desc: |-
@@ -89,8 +90,8 @@ no_permission: 无写入权限
 cannot_export_to_folder: 无法导入文件到此文件夹。
 select_one_nine_patch_asset: 请选择一个点九资源。
 nine_patch_layer_structure_is_wrong: 点九资源的图层结构有误。
-color_resource_code_from_selected_layer: Color Resource Code From Selected Layer
-color_resource_code_from_document_color: Color Resource Code From Document Color
+color_resource_code_from_selected_layer: 从选中图层生成色彩资源代码
+color_resource_code_from_document_color: 从文档色彩生成色彩资源代码
 
 html_tip_bg_light: 使用亮色透明背景
 html_tip_bg_dark: 使用暗色透明色背景
