--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,7 @@
+
+-   version: 2.3.3
+    commitID: 6a666cd12193a2f3ae17eaff73dc896c51de13b9
+
 -   version: 2.3.2
     commitID: 49ec265e6c48bdbf7706dd22dea0ba7ad7fa2f38
 
