--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -92,6 +92,7 @@ select_one_nine_patch_asset: Please select one nine-patch asset.
 nine_patch_layer_structure_is_wrong: The layer structure of nine-patch asset is wrong.
 color_resource_code_from_selected_layer: Color Resource Code From Selected Layer
 color_resource_code_from_document_color: Color Resource Code From Document Color
+no_document_color: No any document color in current Sketch document.
 
 html_tip_bg_light: Use light transparent background
 html_tip_bg_dark: Use dark transparent background
