--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -92,6 +92,7 @@ select_one_nine_patch_asset: 请选择一个点九资源。
 nine_patch_layer_structure_is_wrong: 点九资源的图层结构有误。
 color_resource_code_from_selected_layer: 从选中图层生成色彩资源代码
 color_resource_code_from_document_color: 从文档色彩生成色彩资源代码
+no_document_color: 当前文档中没有任何文档色彩。
 
 html_tip_bg_light: 使用亮色透明背景
 html_tip_bg_dark: 使用暗色透明色背景
