--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -68,6 +68,7 @@
         {
             "name": "Export Shape Drawable XML",
             "identifier": "export_shape_xml",
+            "handler": "exportShapeXML",
             "script": "export/export_shape_xml.cocoascript"
         },
         {
@@ -86,6 +87,12 @@
             "identifier": "color_resource_code_from_document_color",
             "handler": "colorResourceCodeFromDocumentColor",
             "script": "preview/color_code_preview.cocoascript"
+        },
+        {
+            "name": "View Shape Drawable XML Code",
+            "identifier": "view_shape_xml_code",
+            "handler": "viewShapeXMLCode",
+            "script": "export/export_shape_xml.cocoascript"
         },
         {
             "name": "Add System Icon Grid Line",
@@ -158,6 +165,7 @@
             "-",
             "nine_patch_preview",
             "color_resource_code_from_document_color",
+            "view_shape_xml_code",
             "-",
             {
                 "title": "Utilities",
