--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -94,6 +94,8 @@ nine_patch_layer_structure_is_wrong: The layer structure of nine-patch asset is 
 color_resource_code_from_selected_layer: Color Resource Code From Selected Layer
 color_resource_code_from_document_color: Color Resource Code From Document Color
 no_document_color: No any document color in current Sketch document.
+no_selected_shape_layer: Please select at least one shape layer with solid or gradient fill.
+no_color_in_selected_layers: No any color in selected layer.
 
 html_tip_bg_light: Use light transparent background
 html_tip_bg_dark: Use dark transparent background
