--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -5,7 +5,7 @@
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
-    "version": "2.3.3",
+    "version": "2.3.4",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -68,6 +68,7 @@
         {
             "name": "Export Shape Drawable XML",
             "identifier": "export_shape_xml",
+            "handler": "exportShapeXML",
             "script": "export/export_shape_xml.cocoascript"
         },
         {
@@ -78,7 +79,7 @@
         {
             "name": "Color Resource Code From Selected Layer",
             "identifier": "color_resource_code_from_selected_layer",
-            "handler": "colorResourceCodeFromSelectedLayer",
+            "handler": "colorResourceCodeFromLayers",
             "script": "preview/color_code_preview.cocoascript"
         },
         {
@@ -86,6 +87,12 @@
             "identifier": "color_resource_code_from_document_color",
             "handler": "colorResourceCodeFromDocumentColor",
             "script": "preview/color_code_preview.cocoascript"
+        },
+        {
+            "name": "View Shape Drawable XML Code",
+            "identifier": "view_shape_xml_code",
+            "handler": "viewShapeXMLCode",
+            "script": "export/export_shape_xml.cocoascript"
         },
         {
             "name": "Add System Icon Grid Line",
@@ -157,7 +164,9 @@
             "export_shape_xml",
             "-",
             "nine_patch_preview",
+            "color_resource_code_from_selected_layer",
             "color_resource_code_from_document_color",
+            "view_shape_xml_code",
             "-",
             {
                 "title": "Utilities",
