--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,5 @@
+-   version: 2.3.4
+    commitID: e12fbf853899baeaad719bbcb4baf56e08902c4b
 
 -   version: 2.3.3
     commitID: 6a666cd12193a2f3ae17eaff73dc896c51de13b9
