--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,4 +1,7 @@
 -   version: 2.3.4
+    commitID: 5d4cab95f5fa50b74091a787b046207aeedcec6a
+
+-   version: 2.3.4
     commitID: e12fbf853899baeaad719bbcb4baf56e08902c4b
 
 -   version: 2.3.3
