--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,4 +1,7 @@
--   version: 2.3.4
+-   version: 2.3.6
+    commitID: 82f911bb1f1558219cb435a434dbfdfc90f2aeee
+
+-   version: 2.3.5
     commitID: 5d4cab95f5fa50b74091a787b046207aeedcec6a
 
 -   version: 2.3.4
