--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.7
+    commitID: 871740af8c3660211589868eaf566c14f231cdb2
+
 -   version: 2.3.6
     commitID: 82f911bb1f1558219cb435a434dbfdfc90f2aeee
 
