--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.8
+    commitID: 5300b60424b20af9b3e61229c433cd340243305f
+
 -   version: 2.3.7
     commitID: 871740af8c3660211589868eaf566c14f231cdb2
 
