--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.9
+    commitID: 2bbf8d9be53163ab2040b45a365baf507c614216
+
 -   version: 2.3.8
     commitID: 5300b60424b20af9b3e61229c433cd340243305f
 
