--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.10
+    commitID: 78ea94441127e288556f7163d5f4270fc4753463
+
 -   version: 2.3.9
     commitID: 2bbf8d9be53163ab2040b45a365baf507c614216
 
