--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,7 @@
+
+-   version: 2.3.11
+    commitID: 62f2220ad491703f024244aa141fba851c911dfe
+
 -   version: 2.3.10
     commitID: 78ea94441127e288556f7163d5f4270fc4753463
 
