- New dialog for asset name. - Remove invisible layers for new vector drawable. - Fix issue #15.

--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -96,6 +96,7 @@ color_resource_code_from_document_color: Color Resource Code From Document Color
 no_document_color: No any document color in current Sketch document.
 no_selected_shape_layer: Please select at least one shape layer with solid or gradient fill.
 no_color_in_selected_layers: No any color in selected layer.
+remove_invisible_layers: Remove invisible layers.
 
 html_tip_bg_light: Use light transparent background
 html_tip_bg_dark: Use dark transparent background
