--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,5 @@
+-   version: 2.3.12
+    commitID: a4cf73061cb3f3286ef847b15182d5961ebe5001
 
 -   version: 2.3.11
     commitID: 62f2220ad491703f024244aa141fba851c911dfe
