--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.13
+    commitID: 89e8be8de21a79745b5db2798873e93c4518f57d
+
 -   version: 2.3.12
     commitID: a4cf73061cb3f3286ef847b15182d5961ebe5001
 
