--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,7 @@
+
+-   version: 2.3.14
+    commitID: 7e8f1989af54f21d1a4c7a47868260858d47ddc2
+
 -   version: 2.3.13
     commitID: 89e8be8de21a79745b5db2798873e93c4518f57d
 
