--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -1,4 +1,4 @@
-description: 导出 Android 资源, 包括 PNG 资源, 点九资源, 图标和矢量资源。
+description: 用于导出 Android 各种资源的 Sketch 插件，包括 PNG 资源、应用启动图标、点九（Nine-patch）图片、形状 XML 、色彩资源 XML 和矢量（Vector Drawable）文件。
 new_png_asset: 新建 PNG 资源
 new_nine_patch_asset: 新建点九资源
 new_app_icon: 新建应用图标
