--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,5 @@
+-   version: 2.3.15
+    commitID: 969fb7918e49a86030995e9b2d14114458486f7b
 
 -   version: 2.3.14
     commitID: 7e8f1989af54f21d1a4c7a47868260858d47ddc2
