--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.16
+    commitID: a15fb629d3ab85024236bc2dae0c9d1a8e3dcf3d
+
 -   version: 2.3.15
     commitID: 969fb7918e49a86030995e9b2d14114458486f7b
 
