--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.17
+    commitID: bf6e3eeb955865d514f9692ba9d4863c01eda10e
+
 -   version: 2.3.16
     commitID: a15fb629d3ab85024236bc2dae0c9d1a8e3dcf3d
 
