--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 2.3.18
+    commitID: ed816a0a8896891448e32b69e45da80405c41040
+
 -   version: 2.3.17
     commitID: bf6e3eeb955865d514f9692ba9d4863c01eda10e
 
